# GreenOps

./: README.md  docker-compose.yml
services/analytics/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/analytics/src/application/average_load/: service.py
services/analytics/src/application/energy_balance/: service.py
services/analytics/src/domain/: average_load_calculator.py  energy_balance_calculator.py
services/analytics/src/infrastructure/configs/: config.py
services/analytics/src/infrastructure/db/: postgres.py
services/analytics/src/infrastructure/providers/: container.py  database.py  repositories.py  services.py
services/analytics/src/infrastructure/scheduler/: jobs.py
services/analytics/src/tests/unit/: test_energy_balance_calculator.py  test_energy_balance_service.py
services/crud/: .coveragerc  .env.dist  Dockerfile  README.md  alembic.ini  conftest.py  main.py  migrations.dockerfile  pyproject.toml
services/crud/application/: transaction.py
services/crud/application/auth/: dtos.py  exceptions.py
services/crud/application/auth/tokens/: dtos.py  gateways.py
services/crud/domain/: enums.py
services/crud/domain/auth/: dtos.py  exceptions.py
services/crud/domain/infra/: entities.py
services/crud/infrastructure/: server.py
services/crud/infrastructure/api/auth/: auth.py  mappers.py
services/crud/infrastructure/api/users/: dtos.py
services/crud/infrastructure/configs/: __init__.py  postgres.py
services/crud/infrastructure/db/users/: mappers.py  models.py
services/crud/infrastructure/gateways/auth/: __init__.py  jwt.py
services/crud/infrastructure/providers/: config.py  container.py  gateways.py
services/crud/src/application/auth/: services.py
services/crud/src/application/average_load/: service.py
services/crud/src/application/building/: service.py
services/crud/src/application/energy_balance/: service.py
services/crud/src/application/sensor/: service.py
services/crud/src/application/threshold/: service.py
services/crud/src/application/unit/: service.py
services/crud/src/application/users/: services.py
services/crud/src/domain/: energy_balance_calculator.py  exceptions.py
services/crud/src/domain/auth/: entities.py  repositories.py
services/crud/src/domain/average_load/: repository.py
services/crud/src/domain/building/: exceptions.py  repository.py
services/crud/src/domain/energy_balance/: repository.py
services/crud/src/domain/metric/: repository.py
services/crud/src/domain/sensor/: exceptions.py  repository.py
services/crud/src/domain/threshold/: exceptions.py  repository.py
services/crud/src/domain/unit/: exceptions.py  repository.py
services/crud/src/infrastructure/alembic/: env.py
services/crud/src/infrastructure/api/: app.py  exceptions_handlers.py  router.py
services/crud/src/infrastructure/configs/: base.py  config.py
services/crud/src/infrastructure/db/: models.py  postgres.py
services/crud/src/infrastructure/providers/: config.py  database.py  repositories.py  services.py
services/crud/src/infrastructure/scheduler/: jobs.py
services/crud/src/tests/unit/: test_sensor_service.py
services/crud/tests/integration/api/: conftest.py
services/crud/tests/integration/module/: conftest.py
services/crud/tests/unit/: conftest.py
services/crud/tests/unit/auth/: conftest.py  test_authenticate.py  test_authorize.py  test_register.py
services/crud/tests/unit/users/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
services/crudx/: .coveragerc  coverage.txt  pyproject.toml  runner.py
services/crudx/src/: __init__.py
services/crudx/src/crudx/: __init__.py  exceptions.py  types.py
services/crudx/src/crudx/sa/: __init__.py  config.py  decorators.py  transaction.py  utils.py
services/crudx/tests/: conftest.py
services/crudx/tests/sa/: conftest.py  test_transactions.py
services/crudx/tests/sa/gateway/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
services/crudx/tests/sa/repo/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
services/shared/: README.md  alembic.ini  pyproject.toml
services/shared/src/shared/: enums.py  exceptions.py
services/shared/src/shared/db/: __init__.py  average_load.py  building.py  energy_balance.py  incident.py  metric.py  peak_load.py  sensor.py  threshold.py  unit.py
services/shared/src/shared/dtos/: average_load.py  building.py  energy_balance.py  incident.py  metric.py  peak_load.py  sensor.py  threshold.py  unit.py
services/shared/src/shared/entities/: average_load.py  building.py  energy_balance.py  incident.py  metric.py  peak_load.py  sensor.py  threshold.py  unit.py
services/shared/src/shared/migrations/: env.py
services/workers/: Dockerfile  README.md  main.py  pyproject.toml
services/workers/src/application/: transaction.py
services/workers/src/application/telemetry/: service.py
services/workers/src/domain/: enums.py  spike_detector.py
services/workers/src/domain/average_load/: repository.py
services/workers/src/domain/incident/: repository.py
services/workers/src/domain/metric/: repository.py
services/workers/src/domain/peak_load/: repository.py
services/workers/src/domain/telemetry/: entities.py
services/workers/src/domain/threshold/: repository.py
services/workers/src/infrastructure/configs/: config.py
services/workers/src/infrastructure/db/: postgres.py
services/workers/src/infrastructure/kafka/: app.py  (+3 more)
(+108 files in other folders)
