[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["AlexandrVino <alexander-vin0@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
alembic-postgresql-enum = "^1.7.0"
ruff = "^0.14.4"
import-linter = "^2.1"
fastapi = "^0.122.0"
dishka = "^1.7.2"
pydantic-settings = "^2.12.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
bcrypt = "^5.0.0"
uvicorn = "^0.38.0"
adaptix = "^3.0.0b11"
pyjwt = "^2.10.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"
aiosqlite = "^0.21.0"
crudx = {path = "../crudx"}

[tool.poetry.group.tests.dependencies]
httpx = "^0.28.1"
testcontainers = "^4.13.3"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.importlinter]
root_packages = ["domain", "application", "infrastructure"]

[[tool.importlinter.contracts]]
name = "Clean architecture layers"
type = "layers"
layers = ["infrastructure", "application", "domain"]
