[tool.poetry]
name = "crud"
version = "0.1.0"
description = "GreenOps CRUD / Control Plane service"
authors = ["alex-vin0 <alexander-vin0@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
apscheduler = "^3.10.4"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
alembic-postgresql-enum = "^1.7.0"
dishka = "^1.7.2"
adaptix = "^3.0.0b11"
pydantic = {extras = ["email"], version = "^2.12.5"}
greenops-shared = {path = "../shared", develop = true}
crudx = {path = "../crudx", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
