[tool.poetry]
name = "greenops-shared"
version = "0.1.0"
description = "Shared kernel: enums, entities, DTOs, SQLAlchemy models, Alembic migrations"
authors = ["alex-vin0 <alexander-vin0@yandex.ru>"]
packages = [{ include = "shared", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
adaptix = "^3.0.0b11"
alembic = "^1.15.2"
alembic-postgresql-enum = "^1.7.0"
asyncpg = "^0.31.0"
greenlet = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
